--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Mohan_COMP303_Assignment3
 
-spring.datasource.url=jdbc:mysql://localhost:3306/student_enrollment
+spring.datasource.url=jdbc:mysql://localhost:3306/student_enrollment_db
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
